--- a/class-components/package.json
+++ b/class-components/package.json
@@ -7,12 +7,14 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "format:fix": "prettier --write src/**/*.ts",
-    "preview": "vite preview"
+    "format:fix": "prettier --write --extension .ts ./src",
+    "preview": "vite preview",
+    "pre-commit": "lint-staged",
+    "lint-staged": {
+      "*.{js,ts,jsx,tsx}": ["prettier --write"]
+    }
   },
   "dependencies": {
-    "husky": "^9.0.11",
-    "prettier": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -26,6 +28,9 @@
     "eslint-plugin-react-compiler": "^0.0.0-experimental-0998c1e-20240625",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
+    "prettier": "^3.3.2",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
   }
